@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0


class ProductController {
    +findCatalog(): Iterable<CatalogView>
    +create(Product newProduct): ResponseEntity<Product>
    +getProductsByProductName(final String sku): ResponseEntity<Product>
    +getProductsByBarCode(final String sku): ResponseEntity<BufferedImage>
}

interface ProductService <<interface>> {
    +findCatalog(): Iterable<CatalogView>
    +findByProductName(String name): Optional<Product>
    +findByProductBarCode(String barCode): Optional<Product>
}

class ProductServiceImpl{
    +findCatalog(): Iterable<CatalogView>
    +findByProductName(final String name): Optional<Product>
    +findByProductBarCode(final String barCode): Optional<Product>
}

class Product {
    - productId
    - designation
    - description
    - setOfImages
    - sku
    - aggregatedRating
    Product(Long productId, String designation, String description, String setOfImages, Long sku, Long aggregatedRating)
}

class ProductRepository {
    +findCatalog() : List<CatalogView>
    +findByProductName(String designation): Optional<Product>
    +findByProductBarCode(String barCode): Optional<Product>
}

ProductRepository "1" --> "0.." Product:  records

ProductController ..> ProductService
ProductServiceImpl ..> ProductRepository
ProductServiceImpl ..> Product
ProductService ..> Product

ProductServiceImpl .up.|> ProductService


@enduml